Refactor Data Particles to be accepted by Core json schema validator